examples/positive/L3/type_diff_scope.ob
MODULE TypeDiffScope;

TYPE FOO = INTEGER;

PROCEDURE f;
  TYPE FOO = BOOLEAN;
  
  END f;

END TypeDiffScope.
