examples/negative/name_errors/L1/4_type_same_scope.ob
MODULE TypeSameScope;

TYPE STUFF = BOOLEAN;
     STUFF = INTEGER;

VAR b: STUFF;

END TypeSameScope.
